fixed whitespace issue

--- a/src/sections/skills/skills.scss
+++ b/src/sections/skills/skills.scss
@@ -28,6 +28,7 @@
         ul {
             padding-left: 1rem;
             font-size: 1.25rem;
+            white-space: preserve-spaces
         }
 
         li {
